code added to contact page

--- a/src/data/projects.json
+++ b/src/data/projects.json
@@ -5,7 +5,7 @@
         "description": "My latest project featuring the best YouTube channels",
         "link_prod": "https://ikamen.github.io/best_youtube_channels/",
         "link_github": "https://github.com/ikamen/best_youtube_channels",
-        "media": "./assets/youtubeproject.png"
+        "media": "youtubeproject.png"
     },
     {
         "id": "2",
@@ -13,7 +13,7 @@
         "description": "My project on refactoring CSS",
         "link_prod": "https://ikamen.github.io/week1_challenge/",
         "link_github": "https://github.com/ikamen/week1_challenge",
-        "media": "./assets/cssrefactoring.png"
+        "media": "cssrefactoring.png"
     },
     {
         "id": "3",
@@ -21,7 +21,7 @@
         "description": "My project on preparing for the dev course",
         "link_prod": "https://ikamen.github.io/dev_course_prework_test/",
         "link_github": "https://github.com/ikamen/dev_course_prework_test",
-        "media": "./assets/prep.png"
+        "media": "prep.png"
     },
     {
         "id": "4",
@@ -29,7 +29,7 @@
         "description": "My project on creating a password generator",
         "link_prod": "https://ikamen.github.io/password-generator/",
         "link_github": "https://github.com/ikamen/password-generator",
-        "media": "./assets/password.png"
+        "media": "password.png"
     },
     {
         "id": "5",
@@ -37,7 +37,7 @@
         "description": "My project to create a quiz",
         "link_prod": "https://ikamen.github.io/code-quiz/",
         "link_github": "https://github.com/ikamen/code-quiz",
-        "media": "./assets/quiz.png"
+        "media": "quiz.png"
     },
     {
         "id": "6",
@@ -45,7 +45,7 @@
         "description": "My project to create a weather app",
         "link_prod": "https://ikamen.github.io/weather/",
         "link_github": "https://github.com/ikamen/weather",
-        "media": "./assets/weather.png"
+        "media": "weather.png"
     }    
 
 
